--- a/Front/public/index.html
+++ b/Front/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Prevision budgetaire</title>
   </head>
-  <body>
+  <body style="background-color:rgba(36, 35, 35, 0.108);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
