--- a/Front/public/index.html
+++ b/Front/public/index.html
@@ -26,7 +26,9 @@
     -->
     <title>Prevision budgetaire</title>
   </head>
-  <body style="background-color:rgba(36, 35, 35, 0.108);">
+  <body 
+        style="background-color:rgba(36, 35, 35, 0.108);
+  ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
